update license on cargo.toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Marcos Sartori <marcos.sartori@acad.pucrs.br>"]
 edition = "2018"
 description = "Immutable Single Instance Strings for Rust"
 repository = "https://github.com/marlls1989/immutable_string/"
+license = "MIT"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
